# ESUPB_helper_bot

./: .breakpoints  .gitignore  Dialogflow.py  README.md  conv.py  convbot2.py  main.py  namesp.py  private_key.json  pyproject.toml  redis_test.py  requirements.txt
MyHandlers/: danger_handler.py  db_handler.py  improve_handler.py
qa_dataset/: 1. ключ, памят.xlsx  2. A1.xlsx  3. ЕСУПБ определения.xlsx  4. культура производства.xlsx  5. дикие животные.xlsx  6. ОПС.xlsx  qa_base.json  qa_preprocessing.ipynb  База вопросов-ответов.xlsx
